@@ -1,6 +1,5 @@
 charts.png source=PhET
 Check-Mark-u2713.png source=PhET notes=Check Mark and u2713 are the name and value of this Unicode character
-game-icon.png source=PhET
 Heavy-Ballot-X-u2718.png source=PhET notes=Heavy Ballot X and u2718 are the name and value of this Unicode character
 introduction-icon.png source=PhET
 scales.png source=PhET
